--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -90,7 +90,7 @@
                                                             </p>
                                                         </div>
                                                         <ul v-if="activeFiveIndex===thirdIndex" :class="activeFiveIndex===thirdIndex?'display':''">
-                                                            <li v-for="(deviceItem,deviceIndex) in item.deviceList[thirdItem.type]"><div class="item"><i></i><p class="paddingLeft">{{deviceItem.name}}</p></div></li>
+                                                            <li v-for="(deviceItem,deviceIndex) in item.deviceList[thirdItem.type]"><div class="item"><i></i><p class="paddingLeft">{{deviceItem.displayName}}</p></div></li>
                                                         </ul>
                                                     </li>
                                                 </ul>
