--- a/evaluationResult.html
+++ b/evaluationResult.html
@@ -29,7 +29,7 @@
                 <span>考评结果管理</span>
             </div>
             <div class="table">
-                <div class="btnList"><span class="btn1" @click="pdfMap">导出报表</span><span class="btn1">发送报表</span><span class="btn">一键全部发布</span></div>
+                <div class="btnList"><span class="btn1" @click="pdfMap">导出报表</span><span class="btn1" @click="sendReport()">发送报表</span><span class="btn">一键全部发布</span></div>
                 <table id="tableCon">
                     <thead>
                     <tr>
