--- a/reportResult.html
+++ b/reportResult.html
@@ -28,7 +28,7 @@
             <div class="listCon">
                 <div class="title">
                     <span>智能考评管理子系统考评报表</span>
-                    <div class="btnList"><p class="btn1" @click="pdfMap(objectName)">导出报表</p><p class="btn1">发送报表</p></div>
+                    <div class="btnList"><p class="btn1" @click="pdfMap(objectName)">导出报表</p><p class="btn1" @click="sendReport()">发送报表</p></div>
                 </div>
                 <div class="table" id="tableCon">
                     <div class="nameList">
